[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemy/Patrolman.gd" type="Script" id=2]
[ext_resource path="res://Asset/127/Patrolman.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Sensor.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Active"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 80.9938

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 119.567, 104.512 )

[sub_resource type="CircleShape2D" id=7]
radius = 161.645

[sub_resource type="CircleShape2D" id=9]
radius = 174.957

[sub_resource type="CircleShape2D" id=8]
radius = 1004.13

[sub_resource type="Curve2D" id=10]
_data = {
"points": PoolVector2Array(  )
}

[node name="Patrolman" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( 262, -42 )
rotation = 0.523533

[node name="Sprite" parent="Enemy" index="0"]
texture = ExtResource( 3 )
hframes = 3

[node name="AnimationPlayer" parent="Enemy" index="1"]
anims/Active = SubResource( 2 )
anims/Idle = SubResource( 4 )
anims/RESET = SubResource( 3 )

[node name="Hitbox" parent="Enemy" index="2"]
collision_mask = 8
attack_type = "patrolman"

[node name="CollisionShape2D" parent="Enemy/Hitbox" index="0"]
shape = SubResource( 5 )

[node name="Hurtbox" parent="Enemy" index="3"]
collision_layer = 16

[node name="CollisionShape2D" parent="Enemy/Hurtbox" index="0"]
position = Vector2( -9.2007, 2.66751 )
shape = SubResource( 6 )

[node name="CollisionShape2D" parent="Enemy" index="5"]
shape = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Interactable" index="0"]
shape = SubResource( 9 )

[node name="Sensor" parent="Enemy" instance=ExtResource( 4 )]
collision_mask = 2

[node name="CollisionShape2D" parent="Enemy/Sensor" index="0"]
shape = SubResource( 8 )

[node name="Line2D" type="Line2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 10 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 262, -42 )
rotation = 0.523533

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
remote_path = NodePath("../../../Enemy")

[connection signal="hurt" from="Enemy/Hurtbox" to="." method="_on_Hurtbox_hurt"]
[connection signal="area_entered" from="Enemy/Sensor" to="." method="_on_Sensor_area_entered"]
[connection signal="body_entered" from="Enemy/Sensor" to="." method="_on_Sensor_body_entered"]
[connection signal="body_exited" from="Enemy/Sensor" to="." method="_on_Sensor_body_exited"]

[editable path="Enemy"]
[editable path="Enemy/Hitbox"]
[editable path="Enemy/Hurtbox"]
[editable path="Enemy/Sensor"]
